--- a/src/assets/sass/all.scss
+++ b/src/assets/sass/all.scss
@@ -1,3 +1,4 @@
-@import "partials/extends";
+@import "partials/variables";
 @import "partials/functions";
 @import "partials/mixins";
+@import "partials/base";
