--- a/src/assets/sass/partials/_variables.scss
+++ b/src/assets/sass/partials/_variables.scss
@@ -1,15 +1,15 @@
-$assetsDir: '/assets';
-
 $white: #fff;
 $black: #000;
 $blue-dark: #1f3040;
 $dark: #213341;
+$red: #CB110F;
 
 $colors: (
 	white: $white,
 	black: $black,
 	blue-dark: $blue-dark,
-	dark: $dark
+	dark: $dark,
+	red: $red
 );
 
 $aside-index: 100000;
