changes in styling

--- a/src/assets/sass/all.scss
+++ b/src/assets/sass/all.scss
@@ -1,4 +1,5 @@
 @import "partials/variables";
+@import "partials/extends";
 @import "partials/functions";
 @import "partials/mixins";
 @import "partials/base";
