--- a/src/assets/sass/partials/_mixins.scss
+++ b/src/assets/sass/partials/_mixins.scss
@@ -3,10 +3,7 @@
 	padding-top: ($y / $x) * 100%;
 	position: relative;
 	.#{$child} {
-		left: 0;
-		right: 0;
-		bottom: 0;
-		top: 0;
+		@extend %position-absolute-cover;
 		z-index: $slider-index;
 		position: absolute !important;
 	}
