--- a/src/assets/sass/partials/_mixins.scss
+++ b/src/assets/sass/partials/_mixins.scss
@@ -1,19 +1,10 @@
-@mixin aspect-ratio($x, $y, $child: position-absolute) {
-	width: 100%;
-	padding-top: ($y / $x) * 100%;
-	position: relative;
-	.#{$child} {
-		@extend %position-absolute-cover;
-		z-index: $slider-index;
-		position: absolute !important;
-	}
+@mixin position-absolute-cover {
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
 }
 
-@mixin background($cover: cover, $center: 50%, $repeat: no-repeat) {
-	background-size: $cover !important;
-	-webkit-background-size: $cover !important;
-	-moz-background-size: $cover !important;
-	-o-background-size: $cover !important;
-	background-position: $center !important;
-	background-repeat: $repeat !important;
+.position-absolute-cover {
+	@include position-absolute-cover;
 }
