fix failed build

--- a/src/assets/sass/fonts.scss
+++ b/src/assets/sass/fonts.scss
@@ -1,2 +1,2 @@
-@import url('../fonts/Elegant/elegant.scss');
+@import url('/src/assets/fonts/Elegant/elegant.scss');
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap');
